--- a/detail-produk-non-login.html
+++ b/detail-produk-non-login.html
@@ -43,12 +43,12 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link fw-bold" aria-current="page" href="./menu_makanan_non_login.html">BERANDA</a>
-        <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
-        <a class="nav-link fw-bold active" href="./login.html">MASUK</a>
+        <a class="nav-link fw-bold" aria-current="page" href="./landing-page-login-user.html">BERANDA</a>
+        <a class="nav-link fw-bold" href="./menu-makanan-login-user.html">MENU MAKANAN</a>
+        <a class="nav-link fw-bold" href="./login.html">MASUK</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
-        <a href="#" >
+        <a href="./keranjang-belanja-kosong.html" >
           <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
         </a>
       </div>
@@ -68,7 +68,7 @@
       
       <div class="d-flex justify-content-between align-items-center pb-2">
         <span class="text-dark fw-semibold text-decoration-none h5">Nama Makanan</span>
-        <a href="#!" class="fw-semibold text-decoration-none h5" style="color: #D3AC48;">Kembali</a>
+        <a href="menu-makanan-non-login.html" class="fw-semibold text-decoration-none h5" style="color: #D3AC48;">Kembali</a>
       </div>
 
         <div class="card h-80 bg-light">
