--- a/landing-page-login-admin.html
+++ b/landing-page-login-admin.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./assets/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <title>Jabar TradiFood</title>
+  <title>Jabar TradFood</title>
   <style>
     body {
       background: url('./assets/img/Background/Background.jpg');
@@ -46,8 +46,8 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link fw-bold active" aria-current="page" href="./landing_page_login_user.html">BERANDA</a>
-          <a class="nav-link fw-bold" href="./menu_makanan_login_user.html">MENU MAKANAN</a>
+          <a class="nav-link fw-bold active" aria-current="page" href="./landing-page-login-admin.html">BERANDA</a>
+          <a class="nav-link fw-bold" href="./menu-makanan-login-admin.html">MENU MAKANAN</a>
         </div>
         <div class="d-flex align-content-center text-start m-lg-3">
           <a href="#" >
@@ -59,7 +59,7 @@
             <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
           </a>
           <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
-            <li><a class="dropdown-item" href="#">User</a></li>
+            <li><a class="dropdown-item" href="./profil-admin-data-user.html">Admin</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="./index.html">Keluar</a></li>
           </ul>
@@ -149,7 +149,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Goreng Kremes.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng Kremes</a>
+                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng Kremes</a>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Goreng Menari WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng WarSun</a>
+                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng WarSun</a>
               </div>
             </div>
           </div>
@@ -167,7 +167,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Saos Mangga.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
+                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
               </div>
             </div>
           </div>
@@ -176,7 +176,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Sop Gurame Spesial WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
+                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
               </div>
             </div>
           </div>
@@ -198,7 +198,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Produk Terbaru/Sop Gurame Spesial WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010; font-size: 16px;">Sop Gurame Spesial WarSun</a>
+                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010; font-size: 16px;">Sop Gurame Spesial WarSun</a>
               </div>
             </div>
           </div>
@@ -207,7 +207,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Ayam Kalasan WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kalasan WarSun</a>
+                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kalasan WarSun</a>
               </div>
             </div>
           </div>
@@ -216,7 +216,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Ayam Kremes.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kremes</a>
+                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kremes</a>
               </div>
             </div>
           </div>
@@ -225,7 +225,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Sate Ayam.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Sate Ayam</a>
+                <a href="#" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Sate Ayam</a>
               </div>
             </div>
           </div>
@@ -259,7 +259,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
               </div>
             </div>
           </div>
@@ -273,7 +273,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
               </div>
             </div>
           </div>
@@ -287,7 +287,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
               </div>
             </div>
           </div>
@@ -301,7 +301,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
               </div>
             </div>
           </div>
@@ -315,7 +315,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
               </div>
             </div>
           </div>
@@ -329,7 +329,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -343,7 +343,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -357,7 +357,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
           </div>
           </div>
@@ -370,7 +370,7 @@
     <!-- Button Lihat Semua Menu Start -->
     <div class="row mt-4">
       <div class="d-grid col-6 col-md-3 mx-auto">
-        <a type="button" class="btn text-white" style="background-color: #D3AC48;" href="./menu_makanan_login_user.html">Lihat Semua Menu</a>
+        <a type="button" class="btn text-white" style="background-color: #D3AC48;" href="./menu-makanan-login-admin.html">Lihat Semua Menu</a>
       </div>
     </div>
    <!-- Button Lihat Semua Menu End -->
