--- a/detail-tagihan.html
+++ b/detail-tagihan.html
@@ -43,12 +43,11 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link fw-bold" aria-current="page" href="./index.html">BERANDA</a>
-        <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
-        <a class="nav-link fw-bold" href="./login.html">MASUK</a>
+        <a class="nav-link fw-bold" aria-current="page" href="./landing-page-login-user.html">BERANDA</a>
+        <a class="nav-link fw-bold" href="./menu-makanan-login-user.html">MENU MAKANAN</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
-        <a href="#" >
+        <a href="./keranjang-belanja-terisi.html">
           <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
         </a>
       </div>
@@ -56,6 +55,11 @@
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
         </a>
+        <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
+          <li><a class="dropdown-item" href="./profil-user.html">User</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="./index.html">Keluar</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -64,80 +68,121 @@
 
 <!-- Breadcrumbs End --> 
 <div class="container">
-    <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
-      <div class="row mt-3 mb-4">
-        <div class="col-12">
-  
-          <div class="d-flex justify-content-center align-items-center pb-2">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-              <ol class="breadcrumb text-decoration-none fw-semibold">
-                <li class="breadcrumb-item active" aria-current="page">Profil Data User</li>
-                <li class="breadcrumb-item active" aria-current="page">Tambah Produk</li>
-                <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Pesanan</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Riwayat Pembelian</li>
-              </ol>
-            </nav>
-          </div>
-  
+  <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
+    <div class="row mt-3 mb-4">
+      <div class="col-12">
+
+        <div class="d-flex justify-content-center align-items-center pb-2">
+          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb text-decoration-none fw-semibold">
+              <li class="breadcrumb-item"><a href="./keranjang-belanja-terisi.html" style="text-decoration: none; color: #D3AC48;">Keranjang Belanja</a></li>
+              <li class="breadcrumb-item"><a href="./detail-tagihan.html" style="text-decoration: none; color: #D3AC48;">Detail Tagihan</a></li>
+              <li class="breadcrumb-item"><a href="./pembayaran.html" style="text-decoration: none; color: #D3AC48;">Pesanan Selesai</a></li>
+              <!-- <li class="breadcrumb-item active" aria-current="page">Pesanan</li> -->
+            </ol>
+          </nav>
         </div>
+
       </div>
-  </div>
-  <!-- Breadcrumbs Start -->
+    </div>
+</div>
+<!-- Breadcrumbs Start -->
 
 <!-- Judul Start --> 
 <div class="container">
-  <div class="row mt-3 pb-3">
+  <div class="row">
       <div class="col-12">
-        <div class="row mb-4">
-
-          <div class="col-5 col-md-3 d-flex justify-content-start">
-            <div class="input-group">
-              <button type="button" class="btn btn-primary border-light" style="background-color: #D3AC48;">Cari</button>
-              <input type="search" class="form-control" placeholder="Cari User" aria-label="Search" aria-describedby="search-addon" width="10px"/>
-            </div>
-          </div>
-
-        </div>
+      <div class="d-flex justify-content-align-items-center pb-2">
+        <a href="./pembayaran.html">
+          <span class="text-dark fw-semibold text-decoration-none h5">Buat Pesanan</span>
+        </a>
+      </div>
     </div>
   </div>
 </div>
 <!-- Judul End -->
 
-<!-- Tabel Start -->
+<!-- Input Form Start -->
 <div class="container">
-    <div class="row" style="padding-bottom: 220px;">
-        <div class="col-12">
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">No</th>
-                    <th scope="col">Nama Pesanan</th>
-                    <th scope="col">Kategori</th>
-                    <th scope="col">Jumlah</th>
-                    <th scope="col">Status</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Lorem Ipsum 1</td>
-                    <td>Mie</td>
-                    <td>5</td>
-                    <td>Selesai</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Lorem Ipsum 2</td>
-                    <td>Mie</td>
-                    <td>5</td>
-                    <td>Sedang Diproses</td>
-                  </tr>
-                </tbody>
-              </table>
+  <div class="row">
+    <div class="col-10">
+      <form>
+        <div class="form-group row">
+          <label for="inputNamaPenerima" class="col-md-2 col-form-label">Nama Penerima :</label>
+          <div class="col-md-4 pb-3">
+            <input type="text" class="form-control" id="inputNamaPenerima" placeholder="Masukan Nama">
+          </div>
         </div>
+        <div class="form-group row">
+          <label for="inputNomorTelepon" class="col-md-2 col-form-label">Nomor Telepon :</label>
+          <div class="col-md-4 pb-3">
+            <input type="text" class="form-control" id="inputNomorTelepon" placeholder="Masukan Nomor Telepon">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputAlamatLengkap" class="col-md-2 col-form-label">Alamat Lengkap :</label>
+          <div class="col-md-4 pb-3">
+            <textarea type="text" class="form-control" id="inputAlamatLengkap" placeholder="Masukan Alamat Lengkap"></textarea>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inlineFormCustomSelectPref" class="col-md-2 col-form-label">Tujuan :</label>
+          <div class="col-md-4 pb-3">
+            <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+              <option selected>Plih Tujuan</option>
+              <option value="1">Bandung</option>
+              <option value="2">Subang</option>
+              <option value="3">Sumedang</option>
+              <option value="3">Cianjur</option>
+              <option value="3">Bogor</option>
+            </select>
+          </div>
+        </div>
+        <fieldset class="form-group">
+          <div class="row">
+            <legend class="col-form-label col-md-2 pt-0">Toko Cabang</legend>
+            <div class="col-md-8 pb-3">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                <label class="form-check-label" for="inlineRadio1">Bandung</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                <label class="form-check-label" for="inlineRadio2">Subang</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                <label class="form-check-label" for="inlineRadio2">Sumedang</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                <label class="form-check-label" for="inlineRadio2">Cianjur</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                <label class="form-check-label" for="inlineRadio2">Bogor</label>
+              </div>
+            </div>
+          </div>
+        </fieldset>
+        <div class="form-group row">
+          <label for="inputTotalItem" class="col-md-2 col-form-label">Total Item :</label>
+          <div class="col-md-4 pb-3">
+            <input type="text" class="form-control" id="inputTotalItem" placeholder="Total Item + Jasa Antar">
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-md-4 pb-3">
+            <a href="./pembayaran.html">
+            <button type="submit" class="btn btn-primary" style="background-color: #D3AC48; border-color: #D3AC48;">Buat Pesanan</button>
+            </a>
+          </div>
+        </div>
+      </form>
     </div>
+  </div>
 </div>
-<!-- Tabel Form End -->
+<!-- Input Form End -->
 
 <!-- Footer Start -->
 <footer class="d-flex flex-wrap justify-content-between align-items-center pb-4 pt-4 border-top bg-light">
