--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
       <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link fw-bold active" aria-current="page" href="./index.html">BERANDA</a>
-          <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
+          <a class="nav-link fw-bold" href="./menu-makanan-non-login.html">MENU MAKANAN</a>
           <a class="nav-link fw-bold" href="./login.html">MASUK</a>
         </div>
         <div class="d-flex align-content-center text-start m-lg-3">
-          <a href="./keranjang_belanja_kosong.html" >
+          <a href="./keranjang-belanja-kosong.html" >
             <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
           </a>
         </div>
@@ -145,7 +145,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Goreng Kremes.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng Kremes</a>
+                <a href="./detail-produk-non-login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng Kremes</a>
               </div>
             </div>
           </div>
@@ -154,7 +154,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Goreng Menari WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng WarSun</a>
+                <a href="./detail-produk-non-login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Goreng WarSun</a>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Gurame Saos Mangga.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
+                <a href="./detail-produk-non-login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Produk Terbaru/Sop Gurame Spesial WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
+                <a href="./detail-produk-non-login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Gurame Saos Mangga</a>
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Produk Terbaru/Sop Gurame Spesial WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010; font-size: 16px;">Sop Gurame Spesial WarSun</a>
+                <a href="./detail-produk-non-login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010; font-size: 16px;">Sop Gurame Spesial WarSun</a>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
             <div class="card h-100 bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Ayam Kalasan WarSun.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kalasan WarSun</a>
+                <a href="./detail-produk-non-login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kalasan WarSun</a>
               </div>
             </div>
           </div>
@@ -212,7 +212,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Ayam Kremes.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kremes</a>
+                <a href="./detail-produk-non-login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Ayam Kremes</a>
               </div>
             </div>
           </div>
@@ -221,7 +221,7 @@
             <div class="card h-100  bg-light">
               <img src="./assets/img/Rekomendasi Makanan/Sate Ayam.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="./detail_produk_non_login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Sate Ayam</a>
+                <a href="./detail-produk-non-login.html" class="card-text fw-semibold text-decoration-none" style="color: #101010;">Sate Ayam</a>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
+                <a href="./detail-produk-non-login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
               </div>
             </div>
           </div>
@@ -269,7 +269,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
+                <a href="./detail-produk-non-login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
               </div>
             </div>
           </div>
@@ -283,7 +283,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
+                <a href="./detail-produk-non-login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
               </div>
             </div>
           </div>
@@ -297,7 +297,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
+                <a href="./detail-produk-non-login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
               </div>
             </div>
           </div>
@@ -311,7 +311,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
+                <a href="./detail-produk-non-login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
               </div>
             </div>
           </div>
@@ -325,7 +325,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="./detail-produk-non-login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -339,7 +339,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="./detail-produk-non-login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -353,7 +353,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_non_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="./detail-produk-non-login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
           </div>
           </div>
