--- a/keranjang-belanja-kosong.html
+++ b/keranjang-belanja-kosong.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <title>Jabar TradiFood</title>
+    <title>Jabar Traditional</title>
     <style>
       body {
         max-height: 100vh;
@@ -17,7 +17,6 @@
         color: #101010;
         font-size: 16px;
       }
-  
       .nav-link {
         color: #101010;
       }
@@ -48,7 +47,7 @@
         <a class="nav-link fw-bold" href="./login.html">MASUK</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
-        <a href="#" >
+        <a href="./keranjang-belanja-kosong.html" >
           <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
         </a>
       </div>
@@ -60,60 +59,82 @@
     </div>
   </div>
 </nav>
-<!-- Navigasi End -->
+<!-- Navigasi End --> 
 
 <!-- Breadcrumbs End --> 
 <div class="container">
-    <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
-      <div class="row mt-3 mb-4">
-        <div class="col-12">
-  
-          <div class="d-flex justify-content-center align-items-center pb-2">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-              <ol class="breadcrumb text-decoration-none fw-semibold">
-                <li class="breadcrumb-item active" aria-current="page">Profil Data User</li>
-                <li class="breadcrumb-item active" aria-current="page">Tambah Produk</li>
-                <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Pesanan</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Riwayat Pembelian</li>
-              </ol>
-            </nav>
-          </div>
-  
-        </div>
-      </div>
-  </div>
-<!-- Breadcrumbs Start -->
+  <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
+    <div class="row mt-3 mb-4">
+      <div class="col-12">
 
-<!-- Tabel Start -->
-<div class="container">
-    <div class="row" style="padding-bottom: 240px;">
-        <div class="col-12">
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">No</th>
-                    <th scope="col">Nama Pemesanan</th>
-                    <th scope="col">Kategori</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Aksi</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Lorem Ipsum</td>
-                    <td>Cumi Goreng Tepung</td>
-                    <td>Selesai</td>
-                    <td>Delete</td>
-                  </tr>
-                </tbody>
-              </table>
+        <div class="d-flex justify-content-center align-items-center pb-2">
+          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb text-decoration-none fw-semibold">
+              <li class="breadcrumb-item active" aria-current="page">Keranjang Belanja</li>
+              <li class="breadcrumb-item active" aria-current="page">Detail Tagihan</li>
+              <li class="breadcrumb-item active" aria-current="page">Pesanan Selesai</li>
+            </ol>
+          </nav>
         </div>
+
+      </div>
     </div>
 </div>
-<!-- Tabel Form End -->
+<!-- Breadcrumbs Start --> 
+    
+<!-- Judul Start --> 
+<div class="container">
+  <div class="row">
+      <div class="col-12">
+      <div class="d-flex justify-content-between align-items-center pb-2">
+        <span class="text-dark fw-semibold text-decoration-none h5">Nama Makanan</span>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Judul End --> 
 
-<!-- Footer Start -->
+<!-- Cart -->
+<div class="container">
+  <div class="row mt-3 mb-4">
+    <div class="col-12">
+      <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="col-lg-12 col-sm-12 hero-feature">
+          <div class="table-responsive" style="padding-bottom: 240px;">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Ceklist</th>
+                  <th scope="col" class="hidden-xs">Produk</th>
+                  <th scope="col">Harga</th>
+                  <th scope="col" class="td-qty align-content-center text-center">Jumlah</th>
+                  <th scope="col">Total Harga</th>
+                  <th scope="col">Aksi</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th></th>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="btn-group btns-cart">
+            <button type="button" class="btn btn-primary" style="background-color: #D3AC48; border: #D3AC48;">Detail Tagihan</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Cart -->
+
+<!-- Footer Start Start -->
 <footer class="d-flex flex-wrap justify-content-between align-items-center pb-4 pt-4 border-top bg-light">
   <div class="container">
     <div class="row mt-3">
