--- a/login.html
+++ b/login.html
@@ -44,11 +44,11 @@
       <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link fw-bold" aria-current="page" href="./index.html">BERANDA</a>
-          <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
+          <a class="nav-link fw-bold" href="./menu-makanan-non-login.html">MENU MAKANAN</a>
           <a class="nav-link fw-bold active" href="./login.html">MASUK</a>
         </div>
         <div class="d-flex align-content-center text-start m-lg-3">
-          <a href="./keranjang_belanja_kosong.html" >
+          <a href="./keranjang-belanja-kosong.html" >
             <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
           </a>
         </div>
@@ -159,9 +159,9 @@
               alert('Username atau Password Anda Salah !')
           }
           if (data[isRegistered].role == 1) {
-              window.location.href = '/landing_page_login_admin.html'
+              window.location.href = '/landing-page-login-admin.html'
           } else {
-              window.location.href = '/landing_page_login_user.html'
+              window.location.href = '/landing-page-login-user.html'
           }
       };
     </script>
