--- a/menu-makanan-login-admin.html
+++ b/menu-makanan-login-admin.html
@@ -46,8 +46,8 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link fw-bold" aria-current="page" href="./landing_page_login_user.html">BERANDA</a>
-          <a class="nav-link fw-bold active" href="./menu_makanan_login_user.html">MENU MAKANAN</a>
+          <a class="nav-link fw-bold" aria-current="page" href="./landing-page-login-admin.html">BERANDA</a>
+          <a class="nav-link fw-bold active" href="./menu-makanan-login-admin.html">MENU MAKANAN</a>
         </div>
         <div class="d-flex align-content-center text-start m-lg-3">
           <a href="#">
@@ -60,7 +60,7 @@
             <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
           </a>
           <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
-            <li><a class="dropdown-item" href="#">User</a></li>
+            <li><a class="dropdown-item" href="./profil-admin-data-user.html">Admin</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -134,7 +134,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Cumi</a>
               </div>
             </div>
           </div>
@@ -148,7 +148,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Empal</a>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Karedok</a>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sambal</a>
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sate</a>
               </div>
             </div>
           </div>
@@ -207,7 +207,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Sop</a>
               </div>
             </div>
           </div>
@@ -237,7 +237,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
             </div>
           </div>
@@ -251,7 +251,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
             </div>
           </div>
@@ -265,7 +265,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Tumis</a>
               </div>
             </div>
           </div>
@@ -279,7 +279,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Udang</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Udang</a>
               </div>
             </div>
           </div>
@@ -293,7 +293,7 @@
               </div>
               <div class="d-flex justify-content-between align-items-center pb-2 mb-2 m-3">
                 <span class="text-dark fw-semibold text-decoration-none">Rp.20.000</span>
-                <a href="./detail_produk_login.html" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Udang</a>
+                <a href="#" class="fw-semibold text-decoration-none" style="color: #D3AC48;">Udang</a>
               </div>
             </div>
           </div>
