--- a/pembayaran.html
+++ b/pembayaran.html
@@ -43,12 +43,11 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link fw-bold" aria-current="page" href="./index.html">BERANDA</a>
-        <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
-        <a class="nav-link fw-bold" href="./login.html">MASUK</a>
+        <a class="nav-link fw-bold" aria-current="page" href="./landing-page-login-user.html">BERANDA</a>
+        <a class="nav-link fw-bold" href="./menu-makanan-login-user.html">MENU MAKANAN</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
-        <a href="#" >
+        <a href="keranjang-belanja-terisi.html" >
           <span class="bi bi-cart4" style="color: #101010; font-size:28px"></span>
         </a>
       </div>
@@ -56,6 +55,11 @@
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
         </a>
+        <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
+          <li><a class="dropdown-item" href="./profil-user.html">User</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="./index.html">Keluar</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -71,9 +75,10 @@
         <div class="d-flex justify-content-center align-items-center pb-2">
           <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb text-decoration-none fw-semibold">
-              <li class="breadcrumb-item active" aria-current="page">Keranjang Belanja</li>
-              <li class="breadcrumb-item active" aria-current="page">Detail Tagihan</li>
-              <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Pesanan Selesai</a></li>
+              <li class="breadcrumb-item"><a href="./keranjang-belanja-terisi.html" style="text-decoration: none; color: #D3AC48;">Keranjang Belanja</a></li>
+              <li class="breadcrumb-item"><a href="./detail-tagihan.html" style="text-decoration: none; color: #D3AC48;">Detail Tagihan</a></li>
+              <li class="breadcrumb-item"><a href="./pembayaran.html" style="text-decoration: none; color: #D3AC48;">Pesanan Selesai</a></li>
+              <!-- <li class="breadcrumb-item active" aria-current="page">Pesanan</li> -->
             </ol>
           </nav>
         </div>
