--- a/profil-admin-pesanan.html
+++ b/profil-admin-pesanan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <title>Jabar Traditional</title>
+    <title>Jabar TradiFood</title>
     <style>
       body {
         max-height: 100vh;
@@ -17,6 +17,7 @@
         color: #101010;
         font-size: 16px;
       }
+  
       .nav-link {
         color: #101010;
       }
@@ -42,9 +43,8 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link fw-bold" aria-current="page" href="./index.html">BERANDA</a>
-        <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
-        <a class="nav-link fw-bold" href="./login.html">MASUK</a>
+        <a class="nav-link fw-bold" aria-current="page" href="./landing-page-login-admin.html">BERANDA</a>
+        <a class="nav-link fw-bold" href="./menu-makanan-login-admin.html">MENU MAKANAN</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
         <a href="#" >
@@ -55,86 +55,96 @@
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
         </a>
+        <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
+          <li><a class="dropdown-item" href="./profil-admin-data-user.html">Admin</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="./index.html">Keluar</a></li>
+        </ul>
       </div>
     </div>
   </div>
 </nav>
-<!-- Navigasi End --> 
+<!-- Navigasi End -->
 
 <!-- Breadcrumbs End --> 
 <div class="container">
-  <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
-    <div class="row mt-3 mb-4">
-      <div class="col-12">
-
-        <div class="d-flex justify-content-center align-items-center pb-2">
-          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-            <ol class="breadcrumb text-decoration-none fw-semibold">
-              <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Keranjang Belanja</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Detail Tagihan</li>
-              <li class="breadcrumb-item active" aria-current="page">Pesanan</li>
-            </ol>
-          </nav>
+    <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
+      <div class="row mt-3 mb-4">
+        <div class="col-12">
+  
+          <div class="d-flex justify-content-center align-items-center pb-2">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb text-decoration-none fw-semibold">
+                <li class="breadcrumb-item"><a href="./profil-admin-data-user.html" style="text-decoration: none; color: #D3AC48;">Profil Data User</a></li>
+                <li class="breadcrumb-item"><a href="./profil-admin-tambah-produk.html" style="text-decoration: none; color: #D3AC48;">Tambah Produk</a></li>
+                <li class="breadcrumb-item"><a href="./profil-admin-pesanan.html" style="text-decoration: none; color: #D3AC48;">Pesanan</a></li>
+                <li class="breadcrumb-item"><a href="./profil-admin-riwayat-pembelian.html" style="text-decoration: none; color: #D3AC48;">Riwayat Pembelian</a></li>
+                <!-- <li class="breadcrumb-item active" aria-current="page">Riwayat Pembelian</li> -->
+              </ol>
+            </nav>
+          </div>
+  
         </div>
-
       </div>
-    </div>
-</div>
-<!-- Breadcrumbs Start --> 
-    
+  </div>
+  <!-- Breadcrumbs Start -->
+
 <!-- Judul Start --> 
 <div class="container">
-  <div class="row">
+  <div class="row mt-3 pb-3">
       <div class="col-12">
-      <div class="d-flex justify-content-between align-items-center pb-2">
-        <span class="text-dark fw-semibold text-decoration-none h5">Nama Makanan</span>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Judul End --> 
+        <div class="row mb-4">
 
-<!-- Cart -->
-<div class="container">
-  <div class="row mt-3 mb-4">
-    <div class="col-12">
-      <div class="col-lg-12 col-md-12 col-sm-12">
-        <div class="col-lg-12 col-sm-12 hero-feature">
-          <div class="table-responsive" style="padding-bottom: 240px;">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Ceklist</th>
-                  <th scope="col" class="hidden-xs">Produk</th>
-                  <th scope="col">Harga</th>
-                  <th scope="col" class="td-qty align-content-center text-center">Jumlah</th>
-                  <th scope="col">Total Harga</th>
-                  <th scope="col">Aksi</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="col-5 col-md-3 d-flex justify-content-start">
+            <div class="input-group">
+              <button type="button" class="btn btn-primary border-light" style="background-color: #D3AC48;">Cari</button>
+              <input type="search" class="form-control" placeholder="Cari User" aria-label="Search" aria-describedby="search-addon" width="10px"/>
+            </div>
           </div>
-          <div class="btn-group btns-cart">
-            <button type="button" class="btn btn-primary" style="background-color: #D3AC48; border: #D3AC48;">Detail Tagihan</button>
-          </div>
+
         </div>
-      </div>
     </div>
   </div>
 </div>
-<!-- End Cart -->
+<!-- Judul End -->
 
-<!-- Footer Start Start -->
+<!-- Tabel Start -->
+<div class="container">
+    <div class="row" style="padding-bottom: 220px;">
+        <div class="col-12">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">No</th>
+                    <th scope="col">Nama Pesanan</th>
+                    <th scope="col">Kategori</th>
+                    <th scope="col">Jumlah</th>
+                    <th scope="col">Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Lorem Ipsum 1</td>
+                    <td>Mie</td>
+                    <td>5</td>
+                    <td>Selesai</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Lorem Ipsum 2</td>
+                    <td>Mie</td>
+                    <td>5</td>
+                    <td>Sedang Diproses</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+    </div>
+</div>
+<!-- Tabel Form End -->
+
+<!-- Footer Start -->
 <footer class="d-flex flex-wrap justify-content-between align-items-center pb-4 pt-4 border-top bg-light">
   <div class="container">
     <div class="row mt-3">
