--- a/profil-admin-riwayat-pembelian.html
+++ b/profil-admin-riwayat-pembelian.html
@@ -43,9 +43,8 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end align-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link fw-bold" aria-current="page" href="./index.html">BERANDA</a>
-        <a class="nav-link fw-bold" href="./menu_makanan_non_login.html">MENU MAKANAN</a>
-        <a class="nav-link fw-bold" href="./login.html">MASUK</a>
+        <a class="nav-link fw-bold" aria-current="page" href="./landing-page-login-admin.html">BERANDA</a>
+        <a class="nav-link fw-bold" href="./menu-makanan-login-admin.html">MENU MAKANAN</a>
       </div>
       <div class="d-flex align-content-center text-start m-lg-3">
         <a href="#" >
@@ -56,6 +55,11 @@
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
         </a>
+        <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
+          <li><a class="dropdown-item" href="./profil-admin-data-user.html">Admin</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="./index.html">Keluar</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -71,10 +75,11 @@
           <div class="d-flex justify-content-center align-items-center pb-2">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
               <ol class="breadcrumb text-decoration-none fw-semibold">
-                <li class="breadcrumb-item active" aria-current="page">Profil Data User</li>
-                <li class="breadcrumb-item active" aria-current="page">Tambah Produk</li>
-                <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Pesanan</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Riwayat Pembelian</li>
+                <li class="breadcrumb-item"><a href="./profil-admin-data-user.html" style="text-decoration: none; color: #D3AC48;">Profil Data User</a></li>
+                <li class="breadcrumb-item"><a href="./profil-admin-tambah-produk.html" style="text-decoration: none; color: #D3AC48;">Tambah Produk</a></li>
+                <li class="breadcrumb-item"><a href="./profil-admin-pesanan.html" style="text-decoration: none; color: #D3AC48;">Pesanan</a></li>
+                <li class="breadcrumb-item"><a href="./profil-admin-riwayat-pembelian.html" style="text-decoration: none; color: #D3AC48;">Riwayat Pembelian</a></li>
+                <!-- <li class="breadcrumb-item active" aria-current="page">Riwayat Pembelian</li> -->
               </ol>
             </nav>
           </div>
@@ -82,22 +87,7 @@
         </div>
       </div>
   </div>
-  <!-- Breadcrumbs Start -->
-
-<!-- Judul Start --> 
-<div class="container">
-  <div class="row mt-3 pb-3">
-      <div class="col-12">
-        <div class="col-5 col-md-3">
-            <div class="input-group">
-              <button type="button" class="btn btn-primary border-light" style="background-color: #D3AC48;">Cari</button>
-              <input type="search" class="form-control" placeholder="Cari Nama User" aria-label="Search" aria-describedby="search-addon" width="10px"/>
-            </div>
-          </div>
-    </div>
-  </div>
-</div>
-<!-- Judul End -->
+<!-- Breadcrumbs Start -->
 
 <!-- Tabel Start -->
 <div class="container">
@@ -107,23 +97,19 @@
                 <thead>
                   <tr>
                     <th scope="col">No</th>
-                    <th scope="col">Gambar</th>
-                    <th scope="col">Nama Produk</th>
-                    <th scope="col">Deskripsi</th>
+                    <th scope="col">Nama Pemesanan</th>
                     <th scope="col">Kategori</th>
-                    <th scope="col">Harga</th>
+                    <th scope="col">Status</th>
                     <th scope="col">Aksi</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Image</td>
-                    <td>Mie Goreng Warsun</td>
-                    <td>Mie Goreng dengan cita rasa jawa barat khas sunda</td>
-                    <td>Mie</td>
-                    <td>Rp. 20.000</td>
-                    <td>Edit</td>
+                    <td>Lorem Ipsum</td>
+                    <td>Cumi Goreng Tepung</td>
+                    <td>Selesai</td>
+                    <td>Delete</td>
                   </tr>
                 </tbody>
               </table>
