--- a/pembayaran.html
+++ b/pembayaran.html
@@ -146,7 +146,7 @@
       
       <div class="col pb-2">
         <div class="card-img">
-          <a href="./detail_produk_login.html">
+          <a href="./transfer-bank.html">
             <img src="./assets/img/Logo Bank/Bank Bni.png" alt="..." class="img-thumbnail">
           </a>
         </div>
@@ -154,7 +154,7 @@
 
       <div class="col pb-2">
         <div class="card-img">
-          <a href="./detail_produk_login.html">
+          <a href="./transfer-bank.html">
             <img src="./assets/img/Logo Bank/Bank Bri.png" alt="..." class="img-thumbnail">
           </a>
         </div>
@@ -162,7 +162,7 @@
 
       <div class="col pb-2">
         <div class="card-img">
-          <a href="./detail_produk_login.html">
+          <a href="./transfer-bank.html">
             <img src="./assets/img/Logo Bank/Bank Bca.png" alt="..." class="img-thumbnail">
           </a>
         </div>
@@ -170,7 +170,7 @@
 
       <div class="col pb-2">
         <div class="card-img">
-          <a href="./detail_produk_login.html">
+          <a href="./transfer-bank.html">
             <img src="./assets/img/Logo Bank/Bank Mandiri.png" alt="..." class="img-thumbnail">
           </a>
         </div>
@@ -178,7 +178,7 @@
 
       <div class="col pb-2">
         <div class="card-img">
-          <a href="./detail_produk_login.html">
+          <a href="./transfer-bank.html">
             <img src="./assets/img/Logo Bank/Bank Permata.png" alt="..." class="img-thumbnail">
           </a>
         </div>
