--- a/transfer-bank.html
+++ b/transfer-bank.html
@@ -117,7 +117,9 @@
       </div>
       <hr>
       <div class="col-md-12 d-flex justify-content-center gap-2 pb-3">
+        <a href="./pembayaran.html">
         <button type="submit" class="btn btn-primary" style="background-color: #D3AC48; border-color: #D3AC48;">Kembali Ke Pembayaran</button>
+        </a>
         <button type="submit" class="btn btn-primary" style="background-color: #D3AC48; border-color: #D3AC48;">Cek Transfer Pembayaran</button>
       </div>
     </div>
